# dataloom

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.pt-BR.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: throughput.py
dataloom/: __init__.py  config.py  exceptions.py  hooks.py  logs.py  loom.py  processors.py  sinks.py  sources.py  types.py  weaver.py
dataloom_engine/: __init__.py  _optional.py  config.py  exceptions.py  hooks.py  logs.py  loom.py  processors.py  sinks.py  sources.py  types.py  weaver.py
examples/: README.md  api_enrichment.py  file_pipeline.py  sensor_statistics.py
tests/: test_config.py  test_core.py  test_loom.py  test_optional.py  test_sinks.py
