[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataloom-engine"
version = "0.7.0"
description = "DataLoom: a lightweight and efficient thread orchestration engine for data pipelines."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Dioni Padilha", email = "dionipdl@gmail.com"}
]
keywords = ["pipeline", "data", "threading", "loom", "concurrency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# The engine core has zero third-party dependencies. numpy is only
# needed by the demo Source/Processor and ships as an optional extra.
dependencies = []

[project.optional-dependencies]
numpy = [
    "numpy>=1.21.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "numpy>=1.21.0",  # used by the test suite and demo implementations
]

[project.urls]
"Homepage" = "https://github.com/dionipadilha/dataloom"
"Changelog" = "https://github.com/dionipadilha/dataloom/blob/main/CHANGELOG.md"
"Issues" = "https://github.com/dionipadilha/dataloom/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dataloom_engine*"]

[tool.setuptools.package-data]
dataloom_engine = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

# No pinned python_version: recent mypy releases no longer accept a 3.9
# target, and the numpy stubs require >= 3.12. Compatibility with 3.9 is
# guaranteed by the CI test matrix, which runs on that version.
[tool.mypy]
files = ["dataloom_engine"]
check_untyped_defs = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# numpy is only used by the demo implementations; ignoring missing stubs
# keeps the check stable in environments without resolved type stubs
module = "numpy.*"
ignore_missing_imports = true
